--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="grey">#989898</color>
     <color name="blue">#2196F3</color>
 
+    <color name="soft_grey">#54989898</color>
+
 </resources>
