--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,10 +22,10 @@
         android:id="@+id/search_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="52dp"
         android:layout_marginHorizontal="@dimen/navigation_buttons_margin"
         android:layout_marginTop="@dimen/navigation_buttons_margin"
-        android:hint="@string/money_input"
+        android:hint="@string/search"
         app:startIconDrawable="@drawable/ic_search"
         app:startIconTint="@color/grey"
         app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_large"
@@ -33,6 +33,8 @@
         app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_large"
         app:boxCornerRadiusTopStart="@dimen/input_corner_radius_large"
         app:hintAnimationEnabled="true"
+        app:boxStrokeColor="@color/grey"
+        app:hintTextColor="@color/grey"
         app:hintEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +42,9 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_edit_text"
+            android:textCursorDrawable="@drawable/cursor_grey"
+            android:padding="0dp"
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text" />
@@ -55,18 +60,20 @@
         app:layout_constraintBottom_toBottomOf="@+id/search_layout"
         app:layout_constraintTop_toTopOf="@id/search_layout"
         app:layout_constraintEnd_toEndOf="@id/search_layout"
-        android:visibility="visible"
+        android:visibility="gone"
         android:src="@drawable/ic_clear"
         android:contentDescription="@string/clear_button"
         android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/search_layout"
-        app:layout_constraintEnd_toEndOf="@id/search_layout"
-        app:layout_constraintTop_toBottomOf="@id/search_layout"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/navigation_buttons_margin"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/search_layout"
+        app:layout_constraintStart_toStartOf="@id/search_layout"
+        app:layout_constraintTop_toBottomOf="@id/search_layout"
+        android:layout_marginBottom="@dimen/navigation_buttons_margin"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
