--- a/app/src/main/res/layout/currency_item.xml
+++ b/app/src/main/res/layout/currency_item.xml
@@ -2,6 +2,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraint_view"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
@@ -12,13 +13,10 @@
         android:layout_height="40dp"
         android:layout_marginHorizontal="2dp"
         app:cardCornerRadius="@dimen/input_corner_radius_large"
+        app:cardPreventCornerOverlap="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardPreventCornerOverlap="false"
-
-        >
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,9 +29,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="18"
-                android:scaleType="centerCrop"
-
-                android:contentDescription="@string/flag" />
+                android:contentDescription="@string/flag"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/currency_info"
