--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,5 +28,12 @@
         android:id="@+id/searchFragment"
         android:name="com.example.currencyconverter.fragments.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <argument
+            android:name="isLeftClicked"
+            app:argType="boolean" />
+        <action
+            android:id="@+id/action_searchFragment_to_converterFragment"
+            app:destination="@id/converterFragment" />
+    </fragment>
 </navigation>
