--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -10,13 +10,25 @@
         android:id="@+id/convert_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/horizontal_margin"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/change_currency"
         android:src="@drawable/convert_currency"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/horizontal_margin"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/start_input_layout"
@@ -25,11 +37,13 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/horizontal_margin"
         android:backgroundTint="@color/white"
+        app:boxStrokeColor="@color/grey"
+        app:hintTextColor="@color/grey"
         android:hint="@string/money_input"
-        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopStart="@dimen/input_corner_radius_medium"
+        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_large"
+        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_large"
+        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_large"
+        app:boxCornerRadiusTopStart="@dimen/input_corner_radius_large"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,38 +56,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:digits="1234567890."
-            android:maxLength="14"
             android:inputType="numberDecimal"
-             />
+            android:maxLength="14" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/end_input_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/horizontal_margin"
-        android:backgroundTint="@color/white"
-        android:focusable="false"
-        android:hint="@string/convert_result"
-        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopStart="@dimen/input_corner_radius_medium"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/convert_button"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/end_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -92,8 +77,8 @@
             android:id="@+id/left_currency"
             android:layout_width="@dimen/flag_long_side"
             android:layout_height="@dimen/flag_short_side"
-            android:elevation="0dp"
             android:clickable="true"
+            android:elevation="0dp"
             android:focusable="true"
             app:cardCornerRadius="@dimen/flag_corner_radius">
 
@@ -102,8 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/red"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/currency_image" />
+                android:contentDescription="@string/currency_image"
+                android:scaleType="centerCrop" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -121,8 +106,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/blue"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/currency_image" />
+                android:contentDescription="@string/currency_image"
+                android:scaleType="centerCrop" />
         </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
@@ -157,21 +142,22 @@
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/navigation_buttons_margin"
         android:layout_marginEnd="@dimen/navigation_buttons_margin"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_settings"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/test_text_view"
+        android:id="@+id/result_text_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        android:layout_height="wrap_content"
+        android:textAlignment="viewEnd"
+        android:paddingEnd="86dp"
+        android:layout_marginTop="@dimen/navigation_buttons_margin"
+        tools:text ="1234567890123456"
+        android:textSize="34sp"
+        app:layout_constraintTop_toBottomOf="@+id/start_input_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
