--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="blue">#2196F3</color>
 
     <color name="soft_grey">#54989898</color>
+    <color name="soft_black">#353535</color>
 
+    <color name="light_grey">#54DBDBDB</color>
 </resources>
