--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -36,14 +36,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/horizontal_margin"
-        android:backgroundTint="@color/white"
-        app:boxStrokeColor="@color/grey"
-        app:hintTextColor="@color/grey"
-        android:hint="@string/money_input"
         app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_large"
         app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_large"
         app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_large"
         app:boxCornerRadiusTopStart="@dimen/input_corner_radius_large"
+        app:hintTextColor="@color/grey"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,15 +49,31 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:imeOptions="actionGo"
             android:id="@+id/start_edit_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/edit_text_bg"
             android:digits="1234567890."
             android:inputType="numberDecimal"
-            android:maxLength="14" />
+            android:maxLength="14"
+            android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ImageButton
+        android:id="@+id/button_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/clear_button_margin_end"
+        android:layout_marginTop="@dimen/clear_button_margin_top"
+        app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
+        app:layout_constraintTop_toTopOf="@id/start_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/start_input_layout"
+        android:visibility="gone"
+        android:src="@drawable/ic_clear"
+        android:contentDescription="@string/clear_button"
+        android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
     <LinearLayout
         android:id="@+id/linear_lay"
@@ -150,14 +163,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/base_currency_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/navigation_buttons_margin"
+        android:paddingEnd="86dp"
+        android:textAlignment="viewEnd"
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@+id/start_input_layout"
+        tools:text="1234567890123456" />
+
+    <TextView
         android:id="@+id/result_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="viewEnd"
+        android:layout_marginTop="@dimen/clear_button_margin_end"
         android:paddingEnd="86dp"
-        android:layout_marginTop="@dimen/navigation_buttons_margin"
-        tools:text ="1234567890123456"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/soft_black"
         android:textSize="34sp"
-        app:layout_constraintTop_toBottomOf="@+id/start_input_layout" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/base_currency_text_view"
+        tools:text="1234567890123456" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
