--- a/app/src/main/res/layout/currency_item.xml
+++ b/app/src/main/res/layout/currency_item.xml
@@ -3,22 +3,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraint_view"
+    style="@style/CurrencyItemBackground"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="@dimen/currency_item_height">
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/currency_card_view"
+        style="@style/CurrencyCardBackground"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="2dp"
-        app:cardCornerRadius="@dimen/input_corner_radius_medium"
-        app:cardPreventCornerOverlap="false"
+        android:layout_height="@dimen/currency_card_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            style="@style/CurrencyItemLinearBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
@@ -34,12 +34,10 @@
 
             <TextView
                 android:id="@+id/currency_info"
+                style="@style/CurrencyItemText"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="80"
-                android:gravity="center_vertical"
-                android:paddingStart="@dimen/clear_button_margin_end"
-                android:text="@string/default_text_recycler_view" />
+                android:layout_weight="82" />
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
