--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,68 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/SearchScreenBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.SearchFragment">
 
     <ImageButton
         android:id="@+id/back_button"
+        style="@style/SearchScreenBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/navigation_buttons_margin"
-        android:layout_marginTop="@dimen/navigation_buttons_margin"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/back_button"
-        android:src="@drawable/arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/SearchEditTextLayout"
         android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/search_edit_height"
         android:layout_marginHorizontal="@dimen/navigation_buttons_margin"
-        android:layout_marginTop="@dimen/navigation_buttons_margin"
-        android:hint="@string/search"
-        app:startIconDrawable="@drawable/ic_search"
-        app:startIconTint="@color/grey"
-        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_medium"
-        app:boxCornerRadiusTopStart="@dimen/input_corner_radius_medium"
-        app:hintAnimationEnabled="true"
-        app:boxStrokeColor="@color/grey"
-        app:hintTextColor="@color/grey"
-        app:hintEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_button">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_edit_text"
-            android:textCursorDrawable="@drawable/cursor_grey"
-            android:padding="0dp"
-            android:textSize="14sp"
+            style="@style/SearchEditTextInput"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="text" />
+            android:layout_height="match_parent" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
         android:id="@+id/button_clear"
+        style="@style/SearchButtonClear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/clear_button_margin_end"
-        android:layout_marginTop="@dimen/clear_button_margin_top"
-        app:layout_constraintBottom_toBottomOf="@+id/search_layout"
-        app:layout_constraintTop_toTopOf="@id/search_layout"
-        app:layout_constraintEnd_toEndOf="@id/search_layout"
-        android:visibility="gone"
-        android:src="@drawable/ic_clear"
         android:contentDescription="@string/clear_button"
-        android:background="?android:attr/selectableItemBackgroundBorderless"/>
+        app:layout_constraintBottom_toBottomOf="@+id/search_layout"
+        app:layout_constraintEnd_toEndOf="@id/search_layout"
+        app:layout_constraintTop_toTopOf="@id/search_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -73,7 +52,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/search_layout"
         app:layout_constraintStart_toStartOf="@id/search_layout"
-        app:layout_constraintTop_toBottomOf="@id/search_layout"
-        android:layout_marginBottom="@dimen/navigation_buttons_margin"/>
+        app:layout_constraintTop_toBottomOf="@id/search_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
