--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,8 +14,11 @@
     <color name="grey">#989898</color>
     <color name="blue">#2196F3</color>
 
+    <color name="dark_grey">#CB4A4A4A</color>
     <color name="soft_grey">#54989898</color>
-    <color name="soft_black">#353535</color>
-
     <color name="light_grey">#54DBDBDB</color>
+
+    <color name="soft_black">#353535</color>
+    <color name="soft_white">#F8F8F8</color>
+
 </resources>
