--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -16,6 +16,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/test_convert_button"
+        style="@style/ConvertButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/convert_button_background"
+        android:contentDescription="@string/change_currency"
+        android:layout_marginEnd="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
+        app:layout_constraintEnd_toEndOf="@+id/start_input_layout"
+        app:layout_constraintTop_toTopOf="@+id/start_edit_text"
+
+        tools:ignore="NotSibling" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@style/ProgressBar"
