--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,66 +8,57 @@
 
     <ImageButton
         android:id="@+id/back_button"
+        style="@style/AnyScreenBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/navigation_buttons_margin"
-        android:layout_marginTop="@dimen/navigation_buttons_margin"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/back_button"
-        android:src="@drawable/arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/settings_title"
+        style="@style/SettingsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settings"
-        android:textSize="22sp"
-        android:textColor="@color/black"
-        android:layout_marginStart="@dimen/navigation_buttons_margin"
-        app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintBottom_toBottomOf="@+id/back_button"
+        app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toTopOf="@+id/back_button" />
 
     <TextView
         android:id="@+id/dark_theme_settings"
+        style="@style/SettingsTextItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dark_theme"
-        android:textColor="@color/black"
-        android:layout_marginTop="48dp"
-        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/back_button"
         app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
     <TextView
         android:id="@+id/language_settings"
+        style="@style/SettingsTextItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/language"
-        android:textColor="@color/black"
-        android:layout_marginTop="48dp"
-        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/back_button"
         app:layout_constraintTop_toBottomOf="@+id/dark_theme_settings" />
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/dark_theme_switcher"
+        style="@style/SettingsSwitchers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/navigation_buttons_margin"
         app:layout_constraintBottom_toBottomOf="@+id/dark_theme_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dark_theme_settings" />
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/language_switcher"
+        style="@style/SettingsSwitchers"
         android:layout_width="wrap_content"
-        android:layout_marginEnd="@dimen/navigation_buttons_margin"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/language_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/language_settings" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
