--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -9,43 +9,28 @@
     <ImageButton
         android:id="@+id/convert_button"
         style="@style/ConvertButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:contentDescription="@string/change_currency"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/test_convert_button"
-        style="@style/ConvertButton"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@drawable/convert_button_background"
-        android:contentDescription="@string/change_currency"
-        android:layout_marginEnd="0dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
-        app:layout_constraintEnd_toEndOf="@+id/start_input_layout"
-        app:layout_constraintTop_toTopOf="@+id/start_edit_text"
-
-        tools:ignore="NotSibling" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@style/ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/start_input_layout" />
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/start_input_layout"
         style="@style/ConvertEditTextLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/convert_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/SettingButton"
+        android:contentDescription="@string/settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
