--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,20 +2,10 @@
 <resources>
 
     <!--Search screen(currency_item)-->
-    <style name="CurrencyItemBackground">
-        <!--<item name="android:background">@color/dark_grey</item>-->
-    </style>
-
-    <style name="CurrencyItemLinearBackground">
-        <!--<item name="android:background">@color/dark_grey</item>-->
-    </style>
-
     <style name="CurrencyCardBackground">
         <item name="android:layout_marginHorizontal">@dimen/currency_card_sides_margin</item>
         <item name="cardCornerRadius">@dimen/input_corner_radius_medium</item>
         <item name="cardPreventCornerOverlap">false</item>
-        <!--<item name="android:backgroundTint">@color/soft_grey</item>-->
-
     </style>
 
     <style name="CurrencyItemText">
@@ -173,6 +163,29 @@
 
     <style name="SettingsSwitchers">
         <item name="android:layout_marginEnd">@dimen/navigation_buttons_margin</item>
+    </style>
+
+    <style name="Material3CustomTheme" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorSecondaryContainer">@color/soft_red</item>
+        <item name="colorSurface">@color/white</item>
+        <!--switch thumb and track colors when checked -->
+        <item name="colorPrimaryContainer">@color/grey</item>
+        <item name="colorPrimary">@color/soft_white</item>
+    </style>
+
+    <style name="LanguageChipGroup">
+        <item name="selectionRequired">true</item>
+        <item name="singleLine">true</item>
+        <item name="singleSelection">true</item>
+        <item name="android:layout_marginEnd">@dimen/navigation_buttons_margin</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:theme">@style/Material3CustomTheme</item>
+        <item name="checkedChip">@id/chip_english</item>
+    </style>
+
+    <style name="LanguageChip" parent="Widget.Material3.Chip.Filter">
+        <item name="android:textSize">@dimen/language_chip_text_size</item>
+        <item name="chipCornerRadius">@dimen/chip_corner_radius</item>
     </style>
 
 </resources>
