--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -25,6 +25,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/start_input_layout" />
 
+    <ProgressBar
+        android:id="@+id/convert_progress_bar"
+        style="@style/ProgressBar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/base_currency_text_view" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/start_input_layout"
