--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -69,7 +69,6 @@
     </style>
 
     <style name="ProgressBar">
-        <item name="android:layout_marginEnd">@dimen/horizontal_margin</item>
         <item name="android:visibility">visible</item>
     </style>
 
@@ -144,6 +143,23 @@
         <item name="android:textAlignment">viewEnd</item>
         <item name="android:textColor">@color/soft_white</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ErrorImage">
+        <item name="android:src">@drawable/ic_no_internet_night</item>
+    </style>
+
+    <style name="ErrorMessage">
+        <item name="android:layout_marginTop">@dimen/error_components_margin</item>
+        <item name="android:text">@string/error_message</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="RefreshButton">
+        <item name="android:layout_marginTop">@dimen/error_components_margin</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:text">@string/refresh</item>
     </style>
 
 
