--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,7 +42,7 @@
         <item name="startIconTint">@color/grey</item>
     </style>
 
-    <style name="SearchEditTextInput" >
+    <style name="SearchEditTextInput">
         <item name="android:inputType">text</item>
         <item name="android:padding">0dp</item>
         <item name="android:textCursorDrawable">@drawable/cursor_grey</item>
@@ -70,7 +70,6 @@
     </style>
 
     <style name="ProgressBar">
-        <item name="android:layout_marginEnd">@dimen/horizontal_margin</item>
         <item name="android:visibility">visible</item>
     </style>
 
@@ -143,6 +142,22 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="ErrorImage">
+        <item name="android:src">@drawable/ic_no_internet</item>
+    </style>
+
+    <style name="ErrorMessage">
+        <item name="android:layout_marginTop">@dimen/error_components_margin</item>
+        <item name="android:text">@string/error_message</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="RefreshButton">
+        <item name="android:layout_marginTop">@dimen/error_components_margin</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:text">@string/refresh</item>
+    </style>
 
     <!--Settings screen-->
     <style name="SettingsTitle">
@@ -157,11 +172,11 @@
         <item name="android:layout_marginTop">@dimen/settings_text_items_margin_top</item>
         <item name="android:textSize">@dimen/settings_text_items_size</item>
     </style>
-    
+
     <style name="SettingsSwitchers">
         <item name="android:layout_marginEnd">@dimen/navigation_buttons_margin</item>
     </style>
-    
+
     <style name="Material3CustomTheme" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorSecondaryContainer">@color/soft_blue</item>
         <item name="colorSurface">@color/white</item>
@@ -183,7 +198,6 @@
         <item name="android:textSize">@dimen/language_chip_text_size</item>
         <item name="chipCornerRadius">@dimen/chip_corner_radius</item>
     </style>
-
 
 
 </resources>
