--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     style="@style/SearchScreenBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SearchFragment">
+    tools:context=".presentation.search.ui.fragments.SearchFragment">
 
     <ImageButton
         android:id="@+id/back_button"
