--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/converterFragment"
-        android:name="com.example.currencyconverter.fragments.ConverterFragment"
+        android:name="com.example.currencyconverter.presentation.converter.ui.ConverterFragment"
         android:label="fragment_converter"
         tools:layout="@layout/fragment_converter" >
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.currencyconverter.fragments.SettingsFragment"
+        android:name="com.example.currencyconverter.presentation.settings.ui.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.currencyconverter.fragments.SearchFragment"
+        android:name="com.example.currencyconverter.presentation.search.ui.fragments.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" >
         <argument
