--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -23,7 +23,8 @@
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/horizontal_margin"
+        app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="@+id/start_input_layout" />
 
     <ProgressBar
