--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+   android:id="@+id/converter_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.converter.ui.ConverterFragment">
@@ -136,6 +137,7 @@
         android:id="@+id/settings_button"
         style="@style/SettingButton"
         android:layout_width="wrap_content"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:contentDescription="@string/settings"
         app:layout_constraintEnd_toEndOf="parent"
