--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,26 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.settings.ui.SettingsFragment"
-    >
-
-    <ImageButton
-        android:id="@+id/back_button"
-        style="@style/AnyScreenBackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/back_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".presentation.settings.ui.SettingsFragment">
 
     <TextView
         android:id="@+id/settings_title"
         style="@style/SettingsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button"
-        app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@+id/back_button" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/dark_theme_settings"
@@ -31,8 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dark_theme"
-        app:layout_constraintStart_toStartOf="@id/back_button"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+        app:layout_constraintStart_toStartOf="@id/settings_title"
+        app:layout_constraintTop_toBottomOf="@+id/settings_title" />
 
     <TextView
         android:id="@+id/language_settings"
@@ -40,16 +29,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/language"
-        app:layout_constraintStart_toStartOf="@id/back_button"
+        app:layout_constraintStart_toStartOf="@id/settings_title"
         app:layout_constraintTop_toBottomOf="@+id/dark_theme_settings" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/dark_theme_switcher"
         style="@style/SettingsSwitchers"
-        android:theme="@style/Material3CustomTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:pointerIcon="arrow"
+        android:theme="@style/Material3CustomTheme"
         app:layout_constraintBottom_toBottomOf="@+id/dark_theme_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dark_theme_settings" />
