--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -162,9 +162,10 @@
     <!--Settings screen-->
     <style name="SettingsTitle">
         <item name="android:text">@string/settings</item>
+        <item name="android:layout_marginStart">@dimen/navigation_buttons_margin</item>
+        <item name="android:layout_marginTop">@dimen/navigation_buttons_margin</item>
         <item name="android:textSize">@dimen/settings_title_size</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:layout_marginStart">@dimen/navigation_buttons_margin</item>
     </style>
 
     <style name="SettingsTextItems">
